[package]
name = "massconnect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket-lite = "*"
tokio = { version = "1", features = ["macros", "time", "io-std", "rt-multi-thread"] }
futures = "*"
structopt = "*"
bytes = "*"
